Bug 389029 - Crash when table view containing combo boxes is re-used
Summary: Crash when table view containing combo boxes is re-used
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 3.1.0 Alpha
Platform: Other Linux
: NOR crash
Target Milestone: 3.1
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-15 22:05 UTC by Jarosław Staniek
Modified: 2018-01-15 22:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2018-01-15 22:05:07 UTC
Possible crash when table view containing combo boxes is re-used.

To reproduce:
- design a table with combo boxes referencing detail tables, e.g. 2 columns
- go to data view, add one record
- go to the designer and change the design by e.g. renaming one column
- go back to data view and try to add one record using the last combo box
- effect: crash because capacity of the new record's data is insufficient
Comment 1 Jarosław Staniek 2018-01-15 22:07:16 UTC
Git commit d98f53f12f0dec3660089b6e8b633ba62527e83b by Jaroslaw Staniek.
Committed on 15/01/2018 at 22:06.
Pushed by staniek into branch 'master'.

Fix possible crash when table view containing combo boxes is re-used
FIXED-IN:3.1.0

M  +2    -5    src/widget/dataviewcommon/kexidataawareobjectiface.cpp

https://commits.kde.org/kexi/d98f53f12f0dec3660089b6e8b633ba62527e83b