Fix possible crash when table view containing combo boxes is re-used

BUG: 389029
FIXED-IN:3.1.0